[gd_scene load_steps=9 format=2]

[ext_resource path="res://Bomb.gd" type="Script" id=1]
[ext_resource path="res://bakudanfull.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "explode"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.2, 0.35, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 2.249e-10, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -15.0, 15.0, -15.0 ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 48.0

[sub_resource type="CircleShape2D" id=4]
radius = 64.0

[sub_resource type="SpatialMaterial" id=5]
proximity_fade_enable = true
proximity_fade_distance = 15.0
distance_fade_mode = 1
distance_fade_min_distance = 0.0
distance_fade_max_distance = 0.0

[sub_resource type="SphereMesh" id=6]
material = SubResource( 5 )

[node name="Bomb" type="Node2D"]

[node name="BombBody" type="KinematicBody2D" parent="."]
collision_layer = 2147483656
collision_mask = 7
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="BombBody"]
root_node = NodePath("../Sprite")
anims/explode = SubResource( 1 )
anims/idle = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BombBody"]
visible = false
scale = Vector2( 1.1, 1.1 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="BombBody"]
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
vframes = 3
hframes = 3

[node name="Radar" type="Area2D" parent="BombBody"]
monitorable = false
collision_layer = 8
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="BombBody/Radar"]
visible = false
shape = SubResource( 4 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="BombBody/Radar"]
visible = false
modulate = Color( 0.752941, 0, 0, 1 )
show_behind_parent = true
scale = Vector2( 160, 160 )
z_index = -6
z_as_relative = false
mesh = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true
[connection signal="animation_finished" from="BombBody/AnimationPlayer" to="BombBody" method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="BombBody/Radar" to="BombBody" method="_on_Radar_body_entered"]
[connection signal="body_exited" from="BombBody/Radar" to="BombBody" method="_on_Radar_body_exited"]
[connection signal="timeout" from="Timer" to="BombBody" method="_on_Timer_timeout"]
